# build-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: tokenizer.py
scripts/ch02/: dataloader.py  embedding.py  tokenizer.py
scripts/ch03/: attention.py
scripts/ch04/: generate_text.py
src/: the_verdict.py
src/attention/: __init__.py  causal_attention.py  multi_head_attention_v1.py  multi_head_attention_v2.py  self_attention_v1.py  self_attention_v2.py  simple_self_attention.py
src/dataloader/: __init__.py  gpt_dataset_v1.py
src/embedding/: __init__.py  simple_embedding_v1.py
src/gpt/: __init__.py  config.py  feed_forward.py  gelu.py  generate.py  layer_norm.py  model.py  transformer.py
src/tokenizer/: __init__.py  simple_tokenizer.py  simple_tokenizer_v1.py  simple_tokenizer_v2.py
