[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-llm"
version = "0.1.0"
description = "Learning to build LLMs with Sebastian Raschka"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.14.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
